--- a/paxos.bib
+++ b/paxos.bib
@@ -142,7 +142,6 @@ institution  = {Microsoft Research},
  issn = {0004-5411},
  pages = {374--382},
  numpages = {9},
- url = {http://doi.acm.org/10.1145/3149.214121},
  doi = {10.1145/3149.214121},
  acmid = {214121},
  publisher = {ACM},
@@ -160,7 +159,6 @@ number       = {MSR-TR-2005-93},
 pages        = {25},
 publisher    = {European Association for Theoretical Computer Science},
 title        = {Omega Meets Paxos: Leader Election and Stability without Eventual Timely Links},
-url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=64674},
 year         = {2005},
 }
 
@@ -215,5 +213,13 @@ year         = {2005},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Paxos, experiences, fault-tolerance, implementation},
-} 
+}
 
+@book{isabelle-hol,
+   author = {Nipkow, Tobias and Wenzel, Markus and Paulson, Lawrence C.},
+    title = {Isabelle/HOL: A Proof Assistant for Higher-order Logic},
+     year = {2002},
+      isbn = {3-540-43376-7},
+       publisher = {Springer-Verlag},
+        address = {Berlin, Heidelberg},
+}
