--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -503,7 +503,7 @@ Raft\cite{raft}. They typically run on a cluster of $2f+1$ nodes, where $f$ is
 the number of faulty nodes that should be tolerated, and consensus is achieved
 on a value $v_i$ when $\ge f+1$ (i.e. a majority) of the nodes agree.  The
 (nonempty) sets of nodes involved in reaching consensus are known as
-\textit{quorums} and the set of quorums in use is known as the
+\textit{quorums} and the collection of quorums in use is known as the
 \textit{configuration} of the cluster.
 
 It is normally necessary to be able to dynamically reconfigure a cluster by
